Stop width overflowing at small breakpoints. Re-posiitomn other elements

--- a/wp-content/themes/conradjones_cuilduin/scss/_base.scss
+++ b/wp-content/themes/conradjones_cuilduin/scss/_base.scss
@@ -11,13 +11,14 @@ body {
 	background: whitesmoke;
 	color: $colorBodyText;
   	width: 100%;
+		overflow-x: hidden;
 
 }
 
 
 @include media($small) {
   body {
-	width: 110%;
+	//width: 110%;
   }
 }
 
