--- a/wp-content/themes/conradjones_cuilduin/scss/_frontpage.scss
+++ b/wp-content/themes/conradjones_cuilduin/scss/_frontpage.scss
@@ -210,6 +210,7 @@
   @include media($small) {
     @include span-columns(8);
     @include shift(1);
+    margin-left: 15%;
   }
 }
 .homepage-content-container-text{
