--- a/wp-content/themes/conradjones_cuilduin/scss/_responsive-small.scss
+++ b/wp-content/themes/conradjones_cuilduin/scss/_responsive-small.scss
@@ -39,6 +39,7 @@
     font-size: 12px;
     margin: 0;
     width: 100%;
+    line-height: 30px;
   }
   footer {
     padding-bottom: 24px;
@@ -55,7 +56,7 @@
     font-size: 12px;
   }
   .page-content-primary-article-container {
-    width: 90%;
+    width:80%;
   }
 
   .page-content.secondary {
@@ -172,7 +173,7 @@
     position: inherit;
   }
   .header-nav-container .register-interest{
-    right: 185px;
+    right: 155px;
     margin-top: 10px;
   }
  #sitemap{
